--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,8 @@
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
     </php>
 
+    <env name="DATABASE_URL" value="sqlite:///:memory:"/>
+
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
